# FastApi-Lesson

./: .gitignore  main.py  pyproject.toml  test.py
app/: __init__.py
app/db/: __init__.py  config.py
app/db/model/: user.py
app/schema/: user.py
